cleanup all test module opes and exports